--- a/custom_components/marstek_ble/manifest.json
+++ b/custom_components/marstek_ble/manifest.json
@@ -5,6 +5,7 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/jaapp/ha-marstek-ble",
+  "issue_tracker": "https://github.com/jaapp/ha-marstek-ble/issues",
   "integration_type": "device",
   "iot_class": "local_polling",
   "requirements": [],
