--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Hassfest validation
+        uses: home-assistant/actions/hassfest@master
       - name: HACS validation
         uses: hacs/action@main
         with:
