Add integration dependencies to manifest

--- a/custom_components/marstek_ble/manifest.json
+++ b/custom_components/marstek_ble/manifest.json
@@ -1,15 +1,6 @@
 {
   "domain": "marstek_ble",
   "name": "Marstek BLE",
-  "codeowners": ["@jaapp"],
-  "config_flow": true,
-  "dependencies": ["bluetooth", "integration", "utility_meter"],
-  "documentation": "https://github.com/jaapp/ha-marstek-ble",
-  "issue_tracker": "https://github.com/jaapp/ha-marstek-ble/issues",
-  "integration_type": "device",
-  "iot_class": "local_polling",
-  "requirements": [],
-  "version": "0.1.0",
   "bluetooth": [
     {
       "local_name": "MST_ACCP_*"
@@ -17,5 +8,14 @@
     {
       "local_name": "MST_VNSE3_*"
     }
-  ]
+  ],
+  "codeowners": ["@jaapp"],
+  "config_flow": true,
+  "dependencies": ["bluetooth", "integration", "utility_meter"],
+  "documentation": "https://github.com/jaapp/ha-marstek-ble",
+  "integration_type": "device",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/jaapp/ha-marstek-ble/issues",
+  "requirements": [],
+  "version": "0.1.0"
 }
